--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="button_gray">#F1F1F1</color>
     <color name="dark_gray">#676767</color>
+    <color name="light_gray">#E0E0E0</color>
+    <color name="main_gray_dark">#828282</color>
 
 </resources>
