--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="button_gray">#F1F1F1</color>
-    <color name="dark_gray">#676767</color>
-    <color name="light_gray">#E0E0E0</color>
+    <color name="gray_800">#676767</color>
+    <color name="gray_200">#E0E0E0</color>
     <color name="main_gray_dark">#828282</color>
     <color name="main_yellow">#FFDA5F</color>
+    <color name="gray_400">#A0A5B1</color>
 
 </resources>
