--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    // 기본
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="button_gray">#F1F1F1</color>
-    <color name="gray_800">#676767</color>
+
+    // 회색
+    <color name="gray_100">#F1F1F1</color>
     <color name="gray_200">#E0E0E0</color>
+    <color name="gray_300">#D9D9D9</color>
+    <color name="gray_400">#A0A5B1</color>
+    <color name="gray_700">#717171</color>
+    <color name="gray_800">#676767</color>
+
+    // 메인
     <color name="main_gray_dark">#828282</color>
     <color name="main_yellow">#FFDA5F</color>
-    <color name="gray_400">#A0A5B1</color>
     <color name="main_gray">#AAAAAA</color>
 
 </resources>
