--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="gray_200">#E0E0E0</color>
     <color name="gray_300">#D9D9D9</color>
     <color name="gray_400">#A0A5B1</color>
+    <color name="gray_500">#989898</color>
     <color name="gray_700">#717171</color>
     <color name="gray_800">#676767</color>
 
